fixed canvas whitespace issue

--- a/src/components/pages/Project.css
+++ b/src/components/pages/Project.css
@@ -227,7 +227,6 @@ canvas{
 	height: auto;
     padding-bottom: 3vw;
 	padding-top: 3vw;
-	background-color: #F9f9f9;
 }
 
 
